Refactor:Update code
